--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   padding:20px;
   margin:0 auto;
   background: #fff;
-  width:900px;
+  width:80em;
 }
 #header{
   font-family: 'Poiret One', cursive;
