--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   padding:20px;
   margin:0 auto;
   background: #fff;
-  width:60em;
+  width:90%;
 }
 #header{
   font-family: 'Poiret One', cursive;
