--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,67 @@
 html{
-  padding:0;
   margin:0;
-  background: #000;
+  padding:0;
 }
-body {
-  padding:20px;
-  margin:0 auto;
-  background: #fff;
+body{
+  margin:0;
+  padding:0;
+  background:#404040;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  line-height: 1.5;
+}
+h1{
+  margin:0;
+  font-family: 'Poiret One', cursive;
+}
+h2{
+  margin:1em 0 0.5em;
+  padding:0.3em;
+  font-size:1.3em;
+  font-weight:600;
+  border-left:6px solid #78a0b8;
+  border-bottom:1px solid #78a0b8;
+}
+h3{
+  margin:1em 0 0;
+  padding:0.3em;
+  font-weight:600;
+  background:#d0e0f0;
+}
+h4{
+  margin:0;
+  padding:0.3em;
+  border-left:6px solid #78a0b8;
+}
+a{
+  color: #0366d6;
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
+a:visited{
+  color: #0366d6;
+}
+hr {
+  height: 1px;
+  border:none;
+  background: #78a0b8;
+}
+#main{
   width:90%;
+  background:#fcfcfc;
+  margin:0 auto;
+  padding:20px;
+  font-size:16px;
+  line-height:1.5;
+  box-sizing: border-box;
 }
 #header{
-  font-family: 'Poiret One', cursive;
-  margin:0 auto;
   text-align: center;
+  margin:3%;
   background:#78a0b8;
   color:#fff;
+}
+#header img {
+  width:40%;
 }
